--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        compose_version = '1.3.0-beta01'
-        kotlin_version = '1.7.10'
+        compose_version = '1.5.4'
+        kotlin_version = '1.9.20'
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
