--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ plugins {
     id 'com.android.application' version '8.2.1' apply false
     id 'com.android.library' version '8.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id("com.google.gms.google-services") version "4.4.0" apply false
+    id("com.google.firebase.crashlytics") version "2.9.9" apply false
 }
 
 task clean(type: Delete) {
