--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,11 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file('local.properties').newDataInputStream())
+        buildConfigField "String", "FLEKSY_API_KEY", "\"${properties.getProperty('fleksy.apiKey')}\""
+        buildConfigField "String", "FLEKSY_API_SECRET", "\"${properties.getProperty('fleksy.apiSecret')}\""
     }
 
     buildTypes {
