--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,13 @@
 [versions]
-compose = "1.7.0"
+compose = "1.7.1"
+compose-material = "1.3.0"
 kotlin = "2.0.20"
 agp = "8.6.0"
 core-ktx = "1.13.1"
 lifecycle-runtime-ktx = "2.8.5"
 activity-compose = "1.9.2"
 navigation-compose = "2.8.0"
-compose-runtime-livedata = "1.7.0"
+compose-runtime-livedata = "1.7.1"
 firebase-bom = "33.2.0"
 gson = "2.11.0"
 fleksylib = "1.2.0"
@@ -19,8 +20,9 @@ firebase-crashlytics-gradle = "3.0.2"
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
-compose-material = { group = "androidx.compose.material", name = "material", version.ref = "compose" }
+compose-material = { group = "androidx.compose.material3", name = "material3", version.ref = "compose-material" }
 compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "compose" }
+androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "compose-material" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 compose-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "compose-runtime-livedata" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
