Fix CI failing due to missing local.properties
Fixes #637

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/enaboapps/Switchify/issues/637?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,5 +22,11 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
+    - name: Create local.properties
+      run: |
+        echo "fleksy.apiKey=your_api_key" >> local.properties
+        echo "fleksy.apiSecret=your_api_secret" >> local.properties
+
     - name: Build with Gradle
       run: ./gradlew build
