--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 compose = "1.7.4"
 compose-material = "1.3.0"
+compose-icons = "1.7.4"
 kotlin = "2.0.20"
 agp = "8.7.1"
 core-ktx = "1.13.1"
@@ -21,6 +22,7 @@ firebase-crashlytics-gradle = "3.0.2"
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
 compose-material = { group = "androidx.compose.material3", name = "material3", version.ref = "compose-material" }
+compose-icons = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose-icons" }
 compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "compose" }
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "compose-material" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
